--- a/Makefile.target
+++ b/Makefile.target
@@ -35,6 +35,10 @@ ifndef CONFIG_HAIKU
 LIBS+=-lm
 endif
 
+ifdef CONFIG_HECA
+LIBS+=-lz -lheca -pthread
+endif
+
 config-target.h: config-target.h-timestamp
 config-target.h-timestamp: config-target.mak
 
@@ -107,10 +111,11 @@ ifdef CONFIG_SOFTMMU
 CONFIG_NO_PCI = $(if $(subst n,,$(CONFIG_PCI)),n,y)
 CONFIG_NO_KVM = $(if $(subst n,,$(CONFIG_KVM)),n,y)
 CONFIG_NO_XEN = $(if $(subst n,,$(CONFIG_XEN)),n,y)
+CONFIG_NO_HECA = $(if $(subst n,,$(CONFIG_HECA)),n,y)
 CONFIG_NO_GET_MEMORY_MAPPING = $(if $(subst n,,$(CONFIG_HAVE_GET_MEMORY_MAPPING)),n,y)
 CONFIG_NO_CORE_DUMP = $(if $(subst n,,$(CONFIG_HAVE_CORE_DUMP)),n,y)
 
-obj-y += arch_init.o cpus.o monitor.o gdbstub.o balloon.o ioport.o heca/qemu-heca.o heca/commandline.o
+obj-y += arch_init.o cpus.o monitor.o gdbstub.o balloon.o ioport.o
 obj-y += hw/
 obj-$(CONFIG_KVM) += kvm-all.o
 obj-$(CONFIG_NO_KVM) += kvm-stub.o
@@ -119,7 +124,6 @@ obj-$(CONFIG_HAVE_GET_MEMORY_MAPPING) += memory_mapping.o
 obj-$(CONFIG_HAVE_CORE_DUMP) += dump.o
 obj-$(CONFIG_NO_GET_MEMORY_MAPPING) += memory_mapping-stub.o
 obj-$(CONFIG_NO_CORE_DUMP) += dump-stub.o
-LIBS+=-lz -lheca -pthread
 
 QEMU_CFLAGS += $(VNC_TLS_CFLAGS)
 QEMU_CFLAGS += $(VNC_SASL_CFLAGS)
@@ -129,6 +133,10 @@ QEMU_CFLAGS += $(VNC_PNG_CFLAGS)
 # xen support
 obj-$(CONFIG_XEN) += xen-all.o xen-mapcache.o
 obj-$(CONFIG_NO_XEN) += xen-stub.o
+
+# heca support
+obj-$(CONFIG_HECA) += heca-all.o
+obj-$(CONFIG_NO_HECA) += heca-stub.o
 
 # Hardware support
 ifeq ($(TARGET_ARCH), sparc64)
